Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19456

Cursor position does not move with TextInput on TextInput->select(endPos, startPos)

    XMLWordPrintable

Details

    Description

      Inconsistent behavior between TextEdit and TextInput. Cursor position does not move to selectionStart with TextInput on TextInput->select(endPos, startPos).

      Steps.

      1. Apply patch / compile auto tests
      2. run tst_qdeclarativetextedit.exe
      3. run tst_qdeclarativetextinput.exe

      Expected: Autotests pass
      Actual: tst_qdeclarativetextinput::selectAndCursorPosition() does not pass

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes